<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_bottom_menu_home"
        android:title="@string/title_bottom_menu_home" />

    <item
        android:id="@+id/questionBankLevelFragment"
        android:icon="@drawable/icon_bottom_menu_q_bank"
        android:title="@string/title_bottom_menu_qbank" />

    <item
        android:id="@+id/liveClassesHomeFragment"
        android:icon="@drawable/icon_bottom_menu_live_class"
        android:title="@string/title_bottom_menu_classes" />

    <item
        android:id="@+id/testFragment"
        android:icon="@drawable/icon_bottom_menu_test"
        android:title="@string/title_bottom_menu_test" />

    <item
        android:id="@+id/dailyHuntFragment"
        android:icon="@drawable/icon_bottom_menu_daily_hunt"
        android:title="@string/title_bottom_menu_daily_hunt" />


</menu>