<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBase"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/img_close_image_dialog"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_close_white_24"
        android:contentDescription="@string/image_description"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:layout_marginTop="?actionBarSize"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/img_right"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_ratting_check"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:contentDescription="@null"
                android:layout_marginTop="@dimen/_30sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masteclass"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pleaserate"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_13ssp"
                android:padding="10dp"
                />

            <RatingBar
                android:id="@+id/videoRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX=".5"
                android:scaleY=".5"
                android:layout_gravity="center_horizontal"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                />


        </LinearLayout>



    </androidx.cardview.widget.CardView>


</RelativeLayout>