<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View" alias="View" />
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/question_pro"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/lLayoutBeginAdv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:weightSum="2">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuyNow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/btn_yellow"
                android:text="@string/question_buynow" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNotNow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/btn_yellow"
                android:text="@string/question_notnow" />

        </LinearLayout>

    </LinearLayout>

</layout>
