<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_96sdp"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:elevation="@dimen/_4sdp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/headerImageView"
        android:layout_width="@dimen/_56sdp"
        android:layout_height="@dimen/_56sdp"
        android:src="@drawable/ic_default"
        android:layout_marginTop="@dimen/_12sdp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nav_header_title"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@+id/headerImageView"
        app:layout_constraintLeft_toRightOf="@+id/headerImageView"
        app:layout_constraintBottom_toTopOf="@+id/txt_student_field"/>

    <TextView
        android:id="@+id/txt_student_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:text="@string/nav_header_subtitle"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintLeft_toRightOf="@+id/headerImageView"
        app:layout_constraintTop_toBottomOf="@+id/txt_student_name"
        app:layout_constraintBottom_toBottomOf="@+id/headerImageView"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/bg_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>