<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" alias="View"/>

        <variable
            name="classViewModel"
            type="app.technotech.koncpt.ui.viewmodels.SlidesModelViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_grey"
        >



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="6dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>

    <LinearLayout android:id="@+id/lnrPlans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/pro_master"
            android:textSize="@dimen/_13ssp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/pro_plans"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_empty_master_class"
            />

        <Button
            android:id="@+id/btnViewPlans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_plans"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/_20sdp"
            android:background="@color/btn_yellow"
            />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Go Back"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    </LinearLayout>

</layout>